<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    android:elevation="10dp"
    android:visibility="visible"
    tools:context=".ui.InfoDialog">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_centerInParent="true"
        android:background="@android:color/white"
        card_view:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/manage_cities_rule"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center"
                android:text="@string/manage_cities_alert"/>

            <Button
                android:id="@+id/doneBtb"
                style="@style/app_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:text="@string/got_it"
                android:layout_gravity="center"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>